Fix Mobile Spacing for About, Experience

--- a/frontend/src/components/body.css
+++ b/frontend/src/components/body.css
@@ -366,4 +366,9 @@ section {
   .form textarea {
     width: 100%;
   }
+
+  .introText,
+  .experience .introText {
+    max-width: 90%;
+  }
 }
